Package: startup
================

Version: 0.14.1-9000 [2020-09-03]

NEW FEATURES:

 * startup(debug = TRUE) now reports on number of lines and file size also
   for the 'R_TESTS' file.

BUG FIXES:

 * Package tests could attempt to backup and update ~/.Rprofile, e.g. if
   it did not have a newline on the last line.


Version: 0.14.1 [2020-03-31]

NEW FEATURES:

 * Add R options as an alternative to corresponding environment variables,
   e.g. added 'startup.disable' ('R_STARTUP_DISABLE'), 'startup.init'
   ('R_STARTUP_INIT'), and 'startup.rdata' ('R_STARTUP_RDATA').

DOCUMENTATION:

 * Add help("startup.options", package = "startup"), which lists environment
   variables and R options that the 'startup' package use.

BUG FIXES:
   
 * The new default of option 'stringsAsFactor' in R (>= 4.0.0) would trigger
   a startup warning.

 * It was not possible to disable the validation of R option 'error' and
   environment variables such as 'R_LIBS_USER', 'R_PROFILE_SITE', and
   'R_CHECK_ENVIRON'.  These validations can now be disabled by specifying
   argument 'check = FALSE', or the corresponding R option, or environment
   variable.  Validation of 'error' specifically can be disable by adding
   'error' to environment variable 'R_STARTUP_CHECK_OPTIONS_IGNORE' or to
   option 'startup.check.options.ignore'. The default is to ignore 'error'.


Version: 0.14.0 [2019-12-09]

SIGNIFICANT CHANGES:

 * startup(all = TRUE) now processes any startup folders in the home directory
   _before_ those in the current working directory.  Previously it was vice
   verse. With the new way, it is possible to override settings made in
   ~/.Renviron.d/ or ~/.Rprofile.d/ with custom ones in local ./.Renviron.d/
   and ./.Rprofile.d/ folders.

NEW FEATURES:

 * Setting environment variable 'R_STARTUP_RDATA' to "remove" will cause an
   existing './.RData' file to be skipped by automatically removing it.
   If "rename", it will be renamed to './.RData.YYYYMMDD_hhmmss' where the