@@ -72,7 +72,7 @@ path_info <- function(f, extra = NULL) {
 }
 
 
-file_info <- function(f, type = "txt", extra = NULL) {
+file_info <- function(f, type = "txt", extra = NULL, validate = FALSE) {
   if (!nzchar(f)) return(sQuote(""))
   fx <- path.expand(f)
   if (length(extra) > 0L) {
@@ -96,6 +96,12 @@ file_info <- function(f, type = "txt", extra = NULL) {
     nvars <- length(vars)
     if (nvars > 0) {
       vars <- sprintf(" (%s)", paste(sQuote(vars), collapse = ", "))
+      if (validate) {
+        ok <- vars %in% names(Sys.getenv())
+        if (!any(ok)) {
+          warning(sprintf("startup: It appears that R never processed file %s (%d lines; %d bytes) because none of the %d environment variables (%s) it should sets have been set", sQuote(fx), nlines(f), file_size(f), nvars, paste(sQuote(vars), collapse = ", ")), immediate. = TRUE, call. = FALSE)
+        }
+      }
     } else {
       vars <- ""
     }
